stop scrollbar from shifting elements

--- a/src/app/homescreen/homescreen.component.scss
+++ b/src/app/homescreen/homescreen.component.scss
@@ -99,7 +99,7 @@ $sidenav-expanded-width: 250px;
 // }
 
 .content {
-  overflow-y: auto;
+  overflow-y: scroll;
   scrollbar-gutter: stable both-edges;
   height: calc(100vh - 64px);
   padding: 32px 64px;
